--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
               <h4 class="card-title">
                 <a href="#">Project One</a>
               </h4>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur eum quasi sapiente nesciunt? Voluptatibus sit, repellat sequi itaque deserunt, dolores in, nesciunt, illum tempora ex quae? Nihil, dolorem!</p>
+              <p class="card-text">Welcome to Chess Club! We are a group of enthusiastic chess players who range in expertise from very beggining players, to chess savaunts who study the game outside of school.</p>
             </div>
           </div>
         </div>
